load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "jupyter",
    srcs = ["jupyter.py"],
    data = [
        ":openai_demo.ipynb",
        "//genc/docs/tutorials:tutorial_1_simple_cascade.ipynb",
        "//genc/docs/tutorials:tutorial_2_custom_routing.ipynb",
        "//genc/docs/tutorials:tutorial_3_custom_runtime.ipynb",
        "//genc/docs/tutorials:tutorial_4_math_tool_agent.ipynb",
        "//genc/docs/tutorials:tutorial_5_langchain_agent.ipynb",
        "//genc/docs/tutorials:tutorial_6_confidential_computing.ipynb",
        "//genc/docs/tutorials:tutorial_7_authoring.ipynb",
        "//genc/docs/tutorials:tutorial_8_android.ipynb",
        "//genc/docs/tutorials:tutorial_9_private_genai.ipynb",
    ],
    tags = [
        "nobuilder",
        "notap",
    ],
    visibility = [
        "//genc/python:python_packages",
    ],
    deps = [
        "//genc/proto/v0:computation_py_pb2",
        "//genc/python/authoring",
        "//genc/python/base",
        "//genc/python/examples",
        "//genc/python/interop",
        "//genc/python/runtime",
    ],
)
