# TODO(ndodda): describe this package.
load("@notebooks//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

alias(
    name = "jupyter_core",
    actual = requirement("jupyter_core"),
)

py_binary(
    name = "jupyter",
    srcs = ["jupyter.py"],
    data = [
        ":openai_demo.ipynb",
        "//generative_computing/docs/tutorials:tutorial_1_simple_cascade.ipynb",
        "//generative_computing/docs/tutorials:tutorial_2_custom_routing.ipynb",
        "//generative_computing/docs/tutorials:tutorial_3_custom_runtime.ipynb",
        "//generative_computing/docs/tutorials:tutorial_4_math_tool_agent.ipynb",
        "//generative_computing/docs/tutorials:tutorial_5_langchain_agent.ipynb",
    ],
    tags = [
        "nobuilder",
        "notap",
    ],
    visibility = [
        "//generative_computing/python:python_packages",
    ],
    deps = [
        requirement("notebook"),
        ":jupyter_core",
        "//generative_computing/proto/v0:computation_py_pb2",
        "//generative_computing/python/authoring",
        "//generative_computing/python/base",
        "//generative_computing/python/examples",
        "//generative_computing/python/interop",
        "//generative_computing/python/runtime",
    ],
)
